--- a/templates/style.css
+++ b/templates/style.css
@@ -12,19 +12,20 @@ body {
 
 .container {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     min-height: 100vh;
 }
 
-.screen {
+
+/* .screen {
     background: linear-gradient(90deg, #5d54a4, #7c78b8);
     position: relative;
     height: 600px;
     width: 560px;
     box-shadow: 0px 0px 24px #5c5696;
-}
+} */
 
 .screen__background {
     position: absolute;
@@ -136,8 +137,8 @@ h4 {
 }
 
 .img {
-    width: 40%;
-    height: 40%;
+    width: 50%;
+    height: 50%;
     border: 10px solid #da1717;
 }
 
