--- a/templates/style.css
+++ b/templates/style.css
@@ -12,20 +12,19 @@ body {
 
 .container {
     display: flex;
-    /* flex-direction: column;
+    flex-direction: column;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
     min-height: 100vh;
 }
 
-
-/* .screen {
+.screen {
     background: linear-gradient(90deg, #5d54a4, #7c78b8);
     position: relative;
     height: 600px;
     width: 560px;
     box-shadow: 0px 0px 24px #5c5696;
-} */
+}
 
 .screen__background {
     position: absolute;
@@ -106,9 +105,9 @@ body {
     border: 1px solid #d4d3e8;
     text-transform: uppercase;
     font-weight: 700;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
     width: 100%;
     color: #4c489d;
     box-shadow: 0px 2px 2px #5c5696;
