--- a/views/qrContainer.pug
+++ b/views/qrContainer.pug
@@ -5,7 +5,7 @@ block content
     img.img(src=`${data}`, alt="QR Code of your request!")
     br
     br
-    h1 Scan me!
+    h1 Scan me! heey man 
 
 
 
